# fbench

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/: fbench.desktop
docs/features/: feature-ideas.md
docs/plans/: 2026-01-15-fbench-tui-go-design.md  2026-01-23-editor-ai-implementation.md  2026-01-23-editor-ai-improvements-design.md
src/: app.rs  filter.rs  main.rs
src/components/: ai_results_panel.rs  connection_dialog.rs  context_menu.rs  execution_plan.rs  filter_panel.rs  history_panel.rs  import_dialog.rs  json_viewer.rs  layout.rs  llm_panel.rs  llm_settings_dialog.rs  menu_bar.rs  mod.rs  queries_panel.rs  quick_switcher.rs  results_table.rs  save_query_dialog.rs  schema_panel.rs  sidebar.rs  sql_editor.rs  status_bar.rs  tab_bar.rs  template_selector.rs
src/config/: connections.rs  drafts.rs  history.rs  mod.rs  queries.rs  recent_tables.rs  session.rs  templates.rs
src/db/: connection.rs  mod.rs  query.rs
src/export/: mod.rs
src/hooks/: mod.rs  use_shiki.rs
src/import/: mod.rs
src/llm/: mod.rs
src/services/: mod.rs
src/state/: db.rs  editor.rs  llm.rs  mod.rs  tabs.rs  ui.rs
src/ui/: ai_prompt.rs  connection.rs  editor.rs  mod.rs  queries.rs  results.rs  schema.rs  statusbar.rs  table_detail.rs
