[package]
name = "fbench"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui_extras = { version = "0.31", features = ["default"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "chrono", "uuid", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
rfd = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
uuid = "1"
keyring = "3"
