[package]
name = "fbench"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dioxus
dioxus = { version = "0.7", features = ["desktop"] }
dioxus-desktop = { version = "0.7" }

# Keep existing
tokio = { version = "1.49", features = ["rt-multi-thread", "sync", "macros", "time"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "chrono", "uuid", "json", "ipnetwork", "bigdecimal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
directories = "6"
rfd = { version = "0.17" }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.20", features = ["v4"] }
keyring = "3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
sqlformat = "0.2"


